# he-site

./: README.md  project.db  pyproject.toml
he/: settings.py  urls.py
he/static/: main.css
he/templates/: simple-menu.html  simple.html
he/templates/menus/: language.html  main-navbar-dropdown-child.html  main-navbar-dropdown.html  main-navbar.html
heapp/: apps.py  models.py  tests.py  urls.py  views.py
heapp/migrations/: 0001_initial.py  0002_auto_20210128_1200.py
locale/pt/LC_MESSAGES/: django.mo  django.po
tests/: test_he_site.py
