[tool.poetry]
name = "he_site"
version = "0.1.0"
description = ""
authors = ["Tiago Dias <tiago@tdias.tech>"]

[tool.poetry.dependencies]
python = "^3.7"
djangocms-installer = "^2.0.0"
django-cms = ">=3.8,<3.9"
djangocms-admin-style = ">=2.0,<3.0"
django-treebeard = ">=4.0,<5.0"
djangocms-text-ckeditor = ">=4.0,<5.0"
djangocms-link = ">=3.0,<4.0"
djangocms-icon = ">=2.0,<3.0"
djangocms-style = ">=3.0,<4.0"
djangocms-googlemap = ">=2.0,<3.0"
djangocms-video = ">=3.0,<4.0"
djangocms-file = ">=3.0,<4.0"
djangocms-picture = ">=3.0,<4.0"
djangocms-bootstrap4 = ">=2.0,<3.0"
easy-thumbnails = "^2.7.1"
django-filer = ">=1.3"
Django = "<3.2"
django-classy-tags = ">=2.0"
django-sekizai = ">=2.0"
django-mptt = ">0.9"
html5lib = ">=1.0.1"
Pillow = ">=3.0"
six = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
